Adjust the startgame button position to prevent them from overlapping with the controls

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ header{
     width: 100%;
     justify-content: space-between;
     margin-bottom: 20px;
+    background-color: rgba(197, 180, 180, 0.773);
 }
 .control{
     margin-right: 20px;
@@ -80,14 +81,31 @@ header{
 #instructions{
     /*padding-top: 10px;*/
     padding: 10px;
-    margin: 5px 0;
+    margin: 5px 80px;
     line-height: 1.2; 
     text-align: center;
     border-radius: 8px; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
     background-color: rgba(197, 180, 180, 0.773);
-}    
+}   
 
+#endgame{
+    text-align: center;
+    padding-top: 10px;
+    
+}
+#endgamebtn{
+    background-color:black ;
+    color: whitesmoke;
+    border-radius: 10px;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 14px;
+}
+#endgamebtn:hover{
+    background-color:#78c08f ;
+}
 /* Extra Small Devices (Phones) */
 @media (max-width: 575.98px) {
     .card-container {
@@ -105,6 +123,7 @@ header{
         font-size: 14px;
         text-align: center;
     }
+   
 
    .card-container {
         grid-template-columns: repeat(5, 1fr);
@@ -143,6 +162,20 @@ header{
         margin-top: 5px;
        
     }
+    #howToPlaybtn {
+        font-size: 20px;
+    }
+    #instructions p {
+        font-size: 15px;
+    }
+    #endgame {
+        margin-top: 5px;
+    }
+
+    #endgamebtn {
+        font-size: 20px;
+    }
+
 }
 
 /* Large Devices (Laptops and Desktops) */
@@ -169,4 +202,18 @@ header{
         top: 40%;
         transform: translate(-50%, -50%);
     }
+    #howToPlaybtn {
+        font-size: 20px;
+    }
+
+    #instructions p {
+        font-size: 18px;
+        justify-content: center;
+    }
+
+    #endgame {
+        font-size: 20px;
+        margin-top: 2px;
+    }
+
 }
